<?xml version="1.0"?>

<package format="2">
  <name>service_robot</name>
  <version>0.0.0</version>
  <description>The service_robot package</description>

  <maintainer email="oben-m@todo.todo">oben-m</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>



</package>
